<resources>
    <string name="app_name">NavigationComponentKullanimi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="others">Others</string>
    <string name="inbox">Inbox</string>
    <string name="orders">Orders</string>
    <string name="collection">Collection</string>
    <string name="notification">Notification</string>
    <string name="profil">Profil</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
</resources>